--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     flex-direction: column;
     z-index: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: aliceblue;
 }
 
@@ -29,18 +29,90 @@ body{
     flex-direction: row;
     z-index: 2;
     width: 100%;
-    height: 50vh;
+    height: 50%;
     background-color: rgb(75, 144, 204);
 }
 
 .main_container .mini_container .recuadro{
     width: 50%;
-    height: 50vh;
+    height: 100%;
     border: solid 1px black;
     position: relative;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     z-index: 3;
+}
+
+.main_container .mini_container .botones{
+    width: 100%;
+    padding: 10px 10px 0px 10px;
+    box-sizing: border-box;
+}
+
+.main_container .mini_container .option_button{
+    width: 20%;
+    height: 90%;
+    box-shadow: 3px 3px 3px #585858;
+    border: 2px solid #000000;
+    z-index: 4;
+    padding: 1px;
+    margin: 0px 10px 20px 10px;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+.main_container .mini_container .option_button:hover{
+    background: #ff84da;
+}
+.main_container .mini_container .option_button:active {
+    transform: translateY(10px);
+  }
+
+
+.top{
+    display: flex;
+    justify-content: flex-start;
+
+}
+
+.down{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.left{
+    display: flex;
+    align-items: flex-start;
+}
+
+.right{
+    display: flex;
+    align-items: flex-end;
+
+}
+
+.main_container .mini_container .recuadro .linear-activity {
+    overflow: hidden;
+    width: 80%;
+    height: 2vh;
+    background-color: #c7ecfd;
+    margin: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #000000;
+    box-shadow: 3px 3px 3px 0px #585858;
+    z-index: 4;
+    border-radius: 5px;
+
+}
+
+.main_container .mini_container .recuadro .determinate {
+    position: relative;
+    max-width: 100%;
+    height: 100%;
+    transition: width 500ms ease-out 1s;
+    background-color: #12ec49;
+    width: 50%;
 }
 
 .blueLight{
@@ -59,6 +131,23 @@ body{
     background-color: rgb(66, 2, 95);
 }
 
+.backgroundBlueLight{
+    background-color: rgb(173, 217, 255);
+}
+
+.backgroundBlueDark{
+    background-color: rgb(56, 119, 170);
+}
+
+.backgroundPurpleLight{
+    background-color: rgb(229, 172, 252);
+}
+
+.backgroundPurpleDark{
+    background-color: rgb(152, 82, 184);
+}
+
+
 .gif{
     position: relative;
     z-index: 10;
@@ -68,7 +157,9 @@ body{
 }
 
 img{
-    width: 50vh;
+    width: auto;
+    height: 8vh;
+    margin: 2px;
 }
 
 .gif .linear-activity {
@@ -79,6 +170,7 @@ img{
     margin: 5px auto;
     border: 1px solid #000000;
     box-shadow: 3px 3px 3px 0px #585858;
+    border-radius: 5px;
 }
 
 .gif .determinate {
@@ -87,6 +179,7 @@ img{
     height: 100%;
     transition: width 500ms ease-out 1s;
     background-color: #12ec49;
+    width: 50%;
 }
 
 .gif .letras{
@@ -101,4 +194,35 @@ img{
     -o-transform:scale(2,1);  Opera  */
     transform:scale(1.5,1); /* W3C */
     
+}
+
+.gif .avatar{
+    width: 60%;
+    height: auto;
+    margin-bottom: 0px;
+}
+
+.main_container .mini_container .recuadro .enunciado{
+    width: 50%;
+    box-sizing: border-box;
+    margin: 10px;
+    display: flex;
+    z-index: 3;
+
+}
+
+.main_container .mini_container .recuadro .letras{
+    font-size: 1rem;
+    font-weight: 400;
+    font-family: 'Handjet', sans-serif;
+    color: #FFFFFF;
+    transform:scale(1.5,1); /* W3C */
+    
+}
+.transLeft{
+    transform-origin: top left;
+}
+
+.transRight{
+    transform-origin: top right;
 }
