--- a/style.css
+++ b/style.css
@@ -47,11 +47,13 @@ body{
     width: 100%;
     padding: 10px 10px 0px 10px;
     box-sizing: border-box;
+    flex-wrap: wrap;
+
 }
 
 .main_container .mini_container .option_button{
-    width: 20%;
-    height: 90%;
+    width: 50px;
+    height: 50px;
     box-shadow: 3px 3px 3px #585858;
     border: 2px solid #000000;
     z-index: 4;
@@ -60,6 +62,8 @@ body{
     border-radius: 15px;
     cursor: pointer;
     transition: all 0.5s;
+    flex-basis: 150;
+    flex-grow: 1;
 }
 
 .main_container .mini_container .option_button:hover{
@@ -158,7 +162,7 @@ body{
 
 img{
     width: auto;
-    height: 8vh;
+    height: 30px;
     margin: 2px;
 }
 
