--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body{
     height: 100vh;
     width: 100%;
     background: #cf9999;
+    min-height: 600px;
+
         
 }
 
@@ -21,6 +23,8 @@ body{
     width: 100%;
     height: 100vh;
     background-color: aliceblue;
+    min-height: 600px;
+
 }
 
 .main_container .mini_container{
@@ -156,6 +160,7 @@ body{
     position: relative;
     z-index: 10;
     width: 40%;
+    height: auto;
     text-align: center;
 
 }
