--- a/style.css
+++ b/style.css
@@ -75,7 +75,30 @@ body{
 }
 .main_container .mini_container .option_button:active {
     transform: translateY(10px);
-  }
+}
+
+.main_container .mini_container .option_button2{
+    width: 50px;
+    height: 50px;
+    box-shadow: 3px 3px 3px #4a3b3b;
+    border: 2px solid #000000;
+    z-index: 4;
+    padding: 1px;
+    margin: 0px 10px 20px 10px;
+    border-radius: 15px;
+    cursor: no-drop;
+    transition: all 0.5s;
+    flex-basis: 150;
+    flex-grow: 1;
+    background-color: #4a4b70;
+}
+
+.main_container .mini_container .option_button2:hover{
+    background: #4a4b70;
+}
+.main_container .mini_container .option_button2:active {
+    transform: translateY(10px);
+}
 
 
 .top{
@@ -118,9 +141,9 @@ body{
     position: relative;
     max-width: 100%;
     height: 100%;
-    transition: width 500ms ease-out 1s;
-    background-color: #12ec49;
-    width: 50%;
+/*     transition: width 500ms ease-out 1s;
+ */    background-color: #12ec49;
+    width: 100%;
 }
 
 .blueLight{
@@ -186,9 +209,9 @@ img{
     position: relative;
     max-width: 100%;
     height: 100%;
-    transition: width 500ms ease-out 1s;
+    /* transition: width 500ms ease-out 1s; */
     background-color: #12ec49;
-    width: 50%;
+    width: 100%;
 }
 
 .gif .letras{
