--- a/style.css
+++ b/style.css
@@ -65,13 +65,13 @@ body{
     margin: 0px 10px 20px 10px;
     border-radius: 15px;
     cursor: pointer;
-    transition: all 0.5s;
+    transition: background-color 0.5s;
     flex-basis: 150;
     flex-grow: 1;
 }
 
 .main_container .mini_container .option_button:hover{
-    background: #ff84da;
+    background-color: #ff84da;
 }
 .main_container .mini_container .option_button:active {
     transform: translateY(10px);
@@ -97,7 +97,7 @@ body{
     background: #4a4b70;
 }
 .main_container .mini_container .option_button2:active {
-    transform: translateY(10px);
+    pointer-events: none;
 }
 
 
@@ -141,9 +141,9 @@ body{
     position: relative;
     max-width: 100%;
     height: 100%;
-/*     transition: width 500ms ease-out 1s;
- */    background-color: #12ec49;
-    width: 100%;
+/*     transition: width 500ms ease-out 1s; */   
+    background-color: #12ec49;
+    /* width: 100%; */
 }
 
 .blueLight{
@@ -181,17 +181,20 @@ body{
 
 .gif{
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     z-index: 10;
     width: 40%;
     height: auto;
-    text-align: center;
 
 }
 
 img{
     width: auto;
     height: 30px;
-    margin: 2px;
+    margin: 0px;
 }
 
 .gif .linear-activity {
@@ -211,7 +214,7 @@ img{
     height: 100%;
     /* transition: width 500ms ease-out 1s; */
     background-color: #12ec49;
-    width: 100%;
+    /* width: 100%; */
 }
 
 .gif .letras{
@@ -219,19 +222,23 @@ img{
     font-size: 1.2rem;
     font-family: 'Handjet', sans-serif;
     font-weight: 500;
-    display:inline-block;
+    display:flex;
     /* -webkit-transform:scale(2,1); Safari and Chrome
     -moz-transform:scale(2,1); Firefox
     -ms-transform:scale(2,1);  IE 9
     -o-transform:scale(2,1);  Opera  */
     transform:scale(1.5,1); /* W3C */
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     
 }
 
 .gif .avatar{
-    width: 60%;
-    height: auto;
+    width: auto;
+    height: 25vh;
     margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 .main_container .mini_container .recuadro .enunciado{
@@ -245,16 +252,58 @@ img{
 
 .main_container .mini_container .recuadro .letras{
     font-size: 1rem;
-    font-weight: 400;
+    font-weight: 450;
     font-family: 'Handjet', sans-serif;
     color: #FFFFFF;
     transform:scale(1.5,1); /* W3C */
     
 }
+.gif .crono{
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.gif .crono h4{
+    font-size: 1rem;
+    font-weight: 400;
+    font-family: 'Handjet', sans-serif;
+    color: #12ec49;
+    transform:scale(2,1); /* W3C */
+    -webkit-text-stroke: 0.1px #FFFFFF;
+}
+
 .transLeft{
     transform-origin: top left;
 }
 
 .transRight{
     transform-origin: top right;
+}
+
+.gif button{
+    width: 100px;
+    height: 50px;
+    box-shadow: 3px 3px 3px #ff00c8;
+    border: 2px solid #ff00c8;
+    z-index: 4;
+    padding: 1px;
+    margin: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 0.5s;
+    background-color: #2914e4;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.gif button:hover{
+    background-color: #14b3e4;
+}
+.gif button:active {
+    transform: translateY(10px);
 }
